--- a/Home_Library/Home_Library/Home_Library.csproj
+++ b/Home_Library/Home_Library/Home_Library.csproj
@@ -225,6 +225,7 @@
     <Resource Include="wolf.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Logo.png" />
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
